--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.0.0-rc.8",
     "core-js": "^3.12.1",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
